--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-# This file is used for Git repositories to specify intentionally untracked files that Git should ignore. 
+# This file is used for Git repositories to specify intentionally untracked files that Git should ignore.
 # If you are not using git, you can delete this file. For more information see: https://git-scm.com/docs/gitignore
 # For useful gitignore templates see: https://github.com/github/gitignore
-
+# Elese errors on branches
 # Salesforce cache
 .sfdx/
 
@@ -33,5 +33,11 @@ ehthumbs.db
 [Dd]esktop.ini
 $RECYCLE.BIN/
 
+#Project file
+.project
+.Salesforce
+.settings
+node_modules
+.idea
 # VS Code project settings
 .vscode/
